--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Sloorph</title>
 <meta charset="UTF-8" />
-<meta name="description" content="A free resource." />
+<meta name="description" content="A free resource for everyone." />
+<style>
+body {
+  background-color: red;
+  color: blue;
+}
+</style>
 </head>
 <body>
-
+<h1>Sloorph</h1>
+<p>Slorph is a free resource for everyone. It provides things.</p>
+<p></p>
+<textarea><input type="submit">
 </body>
 </html>
