--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ body {
 <h1>Sloorph</h1>
 <p>Slorph is a free resource for everyone. It provides things.</p>
 <p></p>
-<textarea><input type="submit">
+  <textarea></textarea><input type="submit">
 </body>
 </html>
